# SmartEstate

./: .gitignore  README.md  pyproject.toml  ФТ.md
parsers/avito/: avito_parser.py  run.py
parsers/cian/: cian_parser.py  run.py  test.py
util/: DBHelper.py  avito_parser.py  cian_cities_links_parser.py  cian_parser.py  cities.db  geocoder.py  interfaces.py  links.db  parser_interface.py  proxy_manager.py  Юла.ipynb  два класса авито (1).ipynb
web/: map_act.py  script.js
web/static/: interactive_map.html
web/static/js/: map.js  sidebar.js
web/static/styles/: styles.css
web/templates/: interactive_map.html
