[tool.poetry]
name = "smartestate"
version = "0.1.0"
description = ""
authors = ["Alexander Kleptsov <angst1437@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.32.0"
undetected-chromedriver = "^3.5.5"
bs4 = "^0.0.2"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
